# UY-JOY-narxi

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  Dockerfile.metabase  Dockerfile.ml  PROCESS.txt  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  raw_listing_sample.json  render.yaml  requirements.txt
docs/: contact-data-requirements.md  daily-automation.md  data-quality.md  deployment.md  free-deployment.md  looker-studio-postgres.md  market-anomaly-filter.md  render-deployment.md  telegram-etl.md  unified-warehouse.md
scripts/: backup_prod.sh  bootstrap_project.ps1  create_env_from_example.ps1  daily_update.ps1  deploy_prod.sh  deploy_uyjoy.ps1  export_cloud_warehouse.ps1  export_render_dump.ps1  full_public_scrape_status.ps1  install_daily_update_task.ps1  install_uyjoy_startup.ps1  open_pgadmin.ps1  render_metabase_proxy.py  restart_site.ps1  restore_cloud_warehouse.ps1  restore_prod.sh  restore_render_dump.ps1  run_checks.ps1  run_site.ps1  run_test_scrape.ps1  scrape_all_public_sources.ps1  scrape_many.ps1  scrape_priority_sources.ps1  scrape_prod.sh  scrape_rent_priority_sources.ps1  scrape_telegram_channels.ps1  setup_docker_and_scrape.ps1  setup_local_postgres_and_scrape.ps1  setup_permanent_tunnel.ps1  start_daily_update_if_due.ps1  start_docker_stack.ps1  start_free_tunnel.ps1  start_free_tunnel_background.ps1  start_full_public_scrape_background.ps1  start_local_postgres.ps1  start_permanent_tunnel.ps1  start_uyjoy.ps1  stop_free_tunnel.ps1  stop_full_public_scrape.ps1  sync_cloud_database.ps1  (+4 more)
(+51 files in other folders)
