[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "uyjoy-etl"
version = "0.1.0"
description = "OLX.uz real-estate raw ETL pipeline"
requires-python = ">=3.11"
dependencies = [
    "requests==2.32.4",
    "psycopg[binary]==3.3.4",
    "python-dotenv==1.1.1",
    "fastapi==0.124.4",
    "uvicorn[standard]==0.38.0",
    "jinja2==3.1.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
uyjoy_etl = ["templates/*.html", "static/*.css"]
